# arcfg

./: .ansible-lint.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  ansible.cfg  color.sh  hello.py  pyproject.toml  self.yml  vm-init.sh
collections/: requirements.yml
collections/ansible_collections/arcde/hirigami/: README.md
collections/ansible_collections/arcde/kotami/: README.md
collections/ansible_collections/arcfg/apps/: README.md
collections/ansible_collections/arcfg/boot/: README.md
collections/ansible_collections/arcfg/build_tools/: README.md
collections/ansible_collections/arcfg/cli/: README.md
collections/ansible_collections/arcfg/de/: README.md
collections/ansible_collections/arcfg/desktop/: README.md
collections/ansible_collections/arcfg/display_manager/: README.md
collections/ansible_collections/arcfg/env/: README.md
collections/ansible_collections/arcfg/fonts/: README.md
collections/ansible_collections/arcfg/gnome/: README.md
collections/ansible_collections/arcfg/gnome_gio_mime/: README.md
collections/ansible_collections/arcfg/gnome_shell_extensions/: README.md
collections/ansible_collections/arcfg/gtk/: README.md
collections/ansible_collections/arcfg/hardware/: README.md
collections/ansible_collections/arcfg/hyprland/: README.md
collections/ansible_collections/arcfg/icons/: README.md
collections/ansible_collections/arcfg/internal/: README.md
inventory/host_vars/: localhost.yml
mkrole/: __main__.py  cli.py
mkrole/template/: README.md  copier.yml
mkvars/: __main__.py  cli.py
mkvars/template/: copier.yml
mkvars/template/extensions/: context.py
templates/inventory/: hosts.yml
templates/role/: README.md
(+1162 files in other folders)
