[project]
name = "arcfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ansible>=11.1.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=24.12.2",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]
