[project]
name = "arcfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ansible>=11.1.0",
    "copier>=9.4.1",
    "copier-templates-extensions>=0.3.0",
    "github3-py>=4.0.1",
    "jinja2-getenv-extension>=1.0.2",
]

[dependency-groups]
dev = [
    "ansible-lint>=24.12.2",
    "pre-commit>=4.0.1",
]

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]

[project.scripts]
mkvars = "mkvars.cli:mkvars"
mkrole = "mkrole.cli:mkrole"
