[project]
name = "arcfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ansible>=12.0.0",
    "copier>=9.10.2",
    "copier-templates-extensions>=0.3.2",
    "github3-py>=4.0.1",
    "jinja2-getenv-extension>=1.0.3",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.9.0",
    "pre-commit>=4.3.0",
]

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]
# To use hardlinks, you must store the cache in the same file system.
# Required for testing the configuration in a virtual machine.
cache-dir = ".cache/uv"

[project.scripts]
mkvars = "mkvars.cli:mkvars"
mkrole = "mkrole.cli:mkrole"
